# sieve-of-eratosthenes-cpp

./: CMakeLists.txt  README.md
Libraries/: catch.hpp
Sieve_of_Eratosthenes/: SieveOfEratosthenes.cpp  SieveOfEratosthenes.hpp
Tests/: CMakeLists.txt  SieveOfEratosthenes.cpp
